--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keep-alive-vue3",
-  "version": "1.1.2",
+  "version": "1.2.1",
   "keywords": [
     "vue3",
     "keep-alive",
@@ -8,7 +8,7 @@
     "cache"
   ],
   "scripts": {
-    "build": "rollup --config",
+    "build": "rollup --config --bundleConfigAsCjs",
     "pub": "npm run build && npm publish"
   },
   "main": "./lib/main.js",
